# cached_pipeline

./: README.md  pyproject.toml
src/cached_pipeline/: __init__.py  cache.py  cli.py
tests/: conftest.py  test_cache.py  test_cache_basic.py  test_exclude_args.py  test_pipeline.py  test_truncation.py
